section3/nginx-app/generic-chart/templates/service.yaml
---
# Source: generic-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: "nginx-service"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol:  TCP
      name: http 
  selector:
    app: web
