section3/nginx-app/generic-chart/templates/istio-gateway.yaml
---
# Source: generic-chart/templates/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
   name: web-gateway   
   namespace: web-apps
spec:
  selector:
      istio: ingressgateway
  servers:
    - port:  
        number: 80
        name: http     
        protocol: HTTP      
      hosts:
        - "mohamed.domain.com"
